@@ -154,6 +154,9 @@ Release 2.1.0-beta - UNRELEASED
 
     HDFS-4234. Use generic code for choosing datanode in Balancer.  (szetszwo)
 
+    HDFS-4880. Print the image and edits file loaded by the namenode in the
+    logs. (Arpit Agarwal via suresh)
+
   OPTIMIZATIONS
 
   BUG FIXES
